--- a/labs/02/index.html
+++ b/labs/02/index.html
@@ -55,7 +55,7 @@
 </header>
 
       <section>
-        <h2>Characterizing mutation-expression networks in multiple cancers</h2>
+        <h2>Case study: Characterizing mutation-expression networks in multiple cancers</h2>
 <ul>
 <li><a href="https://twitter.com/shazanfar">Shila Ghazanfar&#39;s</a>  <a href="http://f1000research.com/posters/4-1046">BIS2015 poster</a> has an accompanying Shiny app.</li>
 <li>4,443 tumours analysed over 19 cancers from TCGA</li>
