lab01 reference upd

--- a/labs/01/index.html
+++ b/labs/01/index.html
@@ -286,7 +286,7 @@ cleaned_data = original_data %&gt;%
 
 <ul>
 <li>Robinson D (2015). &quot;Cleaning and visualizing genomic data: a case study in tidy analysis&quot;, blog post. <a href="http://varianceexplained.org/r/tidy-genomics/">http://varianceexplained.org/r/tidy-genomics/</a></li>
-<li>Brauer et al. (2008). Coordination of Growth Rate, Cell Cycle, Stress Response, and Metabolic Activity in Yeast,</li>
+<li>Brauer et al. (2008). Coordination of Growth Rate, Cell Cycle, Stress Response, and Metabolic Activity in Yeast. <em>Molecular Biology of the Cell</em> 19(1) 352-367. doi: <a href="http://www.molbiolcell.org/content/19/1/352.abstract">10.1091/mbc.E07-08-0779</a></li>
 </ul>
 
       </section>
