--- a/labs/02/index.html
+++ b/labs/02/index.html
@@ -73,7 +73,7 @@
 <pre><code class="r">install.packages(c(&quot;shiny&quot;, &quot;igraph&quot;, &quot;WGCNA&quot;, &quot;devtools&quot;))
 source(&quot;http://bioconductor.org/biocLite.R&quot;)
 biocLite(c(&quot;impute&quot;, &quot;GO.db&quot;, &quot;preprocessCore&quot;))
-devtools::install_github(&quot;garthtarr/networkD3&quot;)
+devtools::install_github(&quot;garthtarr/networkD3&quot;, ref = &quot;color&quot;)
 </code></pre>
 
 <ul>
