--- a/labs/01/index.html
+++ b/labs/01/index.html
@@ -100,7 +100,7 @@ cleaned_data = original_data %&gt;%
            c(&quot;name&quot;, &quot;BP&quot;, &quot;MF&quot;, &quot;systematic_name&quot;, &quot;number&quot;), 
            sep = &quot;\\|\\|&quot;) %&gt;%
   mutate_each(funs(trimws), name:systematic_name) %&gt;%
-  select(-number, -GID, -YORF, -GWEIGHT)  %&gt;%
+  dplyr::select(-number, -GID, -YORF, -GWEIGHT)  %&gt;%
   gather(sample, expression, G0.05:U0.3) %&gt;%
   separate(sample, c(&quot;nutrient&quot;, &quot;rate&quot;), sep = 1, convert = TRUE) %&gt;%
   mutate(nutrient = plyr::revalue(nutrient, nutrient_names)) %&gt;%
@@ -186,7 +186,7 @@ cleaned_data = original_data %&gt;%
            c(&quot;name&quot;, &quot;BP&quot;, &quot;MF&quot;, &quot;systematic_name&quot;, &quot;number&quot;), 
            sep = &quot;\\|\\|&quot;) %&gt;%
   mutate_each(funs(trimws), name:systematic_name) %&gt;%
-  select(-number, -GID, -YORF, -GWEIGHT)  %&gt;%
+  dplyr::select(-number, -GID, -YORF, -GWEIGHT)  %&gt;%
   gather(sample, expression, G0.05:U0.3) %&gt;%
   separate(sample, c(&quot;nutrient&quot;, &quot;rate&quot;), sep = 1, convert = TRUE) %&gt;%
   mutate(nutrient = plyr::revalue(nutrient, nutrient_names)) %&gt;%
