--- a/labs/02/index.html
+++ b/labs/02/index.html
@@ -67,7 +67,7 @@
 <ul>
 <li>Check out Shila&#39;s fast forward poster session slide <a href="https://github.com/garthtarr/visR/blob/gh-pages/labs/02/BIS2015FF_Ghazanfar.pdf"><i class="fa fa-link"></i></a></li>
 <li>Download and unzip from <a href="http://www.maths.usyd.edu.au/u/sheilag/pacmen.zip">www.maths.usyd.edu.au/u/sheilag/pacmen.zip</a></li>
-<li>Install a few R packages including customised version of D3network using:</li>
+<li>Install a few R packages including customised version of <code>networkD3</code> using:</li>
 </ul>
 
 <pre><code class="r">install.packages(c(&quot;shiny&quot;, &quot;igraph&quot;, &quot;WGCNA&quot;, &quot;devtools&quot;))
@@ -85,7 +85,7 @@ devtools::install_github(&quot;garthtarr/networkD3&quot;, ref = &quot;color&quot
 
 <ul>
 <li>Alternatively you can run the app by opening either the <code>server.R</code> or the <code>ui.R</code> files in RStudio and then clicking the <code>Run App</code> button in the top right of the code editor window.</li>
-<li>Explore the app to get a feel for the sorts of things you can do with shiny.</li>
+<li>Explore the app to get a feel for the sorts of things you can do with Shiny.</li>
 <li>Check out Shila&#39;s twitter account <a href="https://twitter.com/shazanfar"><i class="fa fa-twitter"></i></a></li>
 </ul>
 
@@ -96,14 +96,14 @@ devtools::install_github(&quot;garthtarr/networkD3&quot;, ref = &quot;color&quot
 <li>If the linkages are missing in the interactive graph, but you can see them in the static graph, you need to install a customised version of <code>networkD3</code>:</li>
 </ul>
 
-<pre><code class="r">devtools::install_github(&quot;garthtarr/networkD3&quot;)
+<pre><code class="r">devtools::install_github(&quot;garthtarr/networkD3&quot;, ref = &quot;color&quot;)
 </code></pre>
 
 <h3>References</h3>
 
 <ul>
-<li>Ghazanfar S and Yang JYH. Characterizing mutation-expression network relationships in multiple cancers. F1000Research 2015, 4:1046 (poster) (doi: <a href="http://dx.doi.org/10.7490/f1000research.1110789.1">10.7490/f1000research.1110789.1</a>)</li>
-<li>Ghazanfar S and Yang JYH. Characterizing mutation-expression network relationships in multiple cancers. <em>Computational Biology and Chemistry Special Issue for <a href="http://www.sfasa.org/apbc2016/apbc2016.html">APBC2016</a></em> (in press).</li>
+<li>Ghazanfar S and Yang JYH (2015). Characterizing mutation-expression network relationships in multiple cancers. F1000Research 2015, 4:1046 (poster) (doi: <a href="http://dx.doi.org/10.7490/f1000research.1110789.1">10.7490/f1000research.1110789.1</a>)</li>
+<li>Ghazanfar S and Yang JYH (2016). Characterizing mutation-expression network relationships in multiple cancers. <em>Computational Biology and Chemistry Special Issue for <a href="http://www.sfasa.org/apbc2016/apbc2016.html">APBC2016</a></em> (in press).</li>
 </ul>
 
       </section>
